Way to many changes to properly document
1. Added a web interface
- Added many js files
- Added a few css files
- Added angular frontend using material design
2. Refactored the plugin lib to a common lib
3. Added an API service
... Many things

--- a/Documentation/Documentation.csproj
+++ b/Documentation/Documentation.csproj
@@ -33,10 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <Folder Include="Diagrams\" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Diagrams\" />
+    <Content Include="ApplicationHierarchy.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
