Refactored the WebHostService Put WebServerService in seperate project Cleaned up and moved some code to Common library Moved Content directory including all files in it to WebServerService project Changed NancyFx to EmbedIO Started to implement controllers for EmbedIO

--- a/Domicile.Common/Domicile.Common.csproj
+++ b/Domicile.Common/Domicile.Common.csproj
@@ -41,13 +41,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EventSeverity.cs" />
+    <Compile Include="Extensions\LogExtensions.cs" />
     <Compile Include="HardwareDeviceType.cs" />
     <Compile Include="IDomicileApplication.cs" />
     <Compile Include="IHardwareDevice.cs" />
     <Compile Include="ILog.cs" />
     <Compile Include="IServiceContext.cs" />
+    <Compile Include="Logging\ConsoleLog.cs" />
+    <Compile Include="Logging\NullLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IService.cs" />
+    <Compile Include="ServiceType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
