--- a/Documentation/Documentation.csproj
+++ b/Documentation/Documentation.csproj
@@ -38,6 +38,9 @@
   <ItemGroup>
     <Content Include="ApplicationHierarchy.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Program.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
